--- a/app/src/main/res/layout/item_animales.xml
+++ b/app/src/main/res/layout/item_animales.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
 
     <ImageView
         android:id="@+id/animalFoto"
@@ -64,3 +68,4 @@
         app:layout_constraintStart_toEndOf="@+id/animalFoto"
         app:layout_constraintTop_toBottomOf="@+id/AnioAnimal" />
 </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
