--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,9 @@
     </style>
 
     <style name="Theme.ProyectoFinalModulo" parent="Base.Theme.ProyectoFinalModulo" />
+    <style name="SplashScreen" parent="Theme.SplashScreen"     >
+        <item name="windowSplashScreenBackground">@color/green</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/logo</item>
+        <item name="postSplashScreenTheme">@style/Theme.ProyectoFinalModulo</item>
+    </style>
 </resources>
