--- a/app/src/main/res/layout/activity_insertar_animales.xml
+++ b/app/src/main/res/layout/activity_insertar_animales.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#E8F5E9"
     tools:context=".InsertarAnimales">
 
     <EditText
@@ -16,7 +17,7 @@
         android:hint="Nombre del Animal"
         android:inputType="text"
         android:background="@drawable/edittext_background"
-        android:textColor="#000000"
+        android:textColor="#388E3C"
         android:textSize="16sp"
         android:padding="12dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -32,7 +33,7 @@
         android:hint="Raza del Animal"
         android:inputType="text"
         android:background="@drawable/edittext_background"
-        android:textColor="#000000"
+        android:textColor="#388E3C"
         android:textSize="16sp"
         android:padding="12dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -48,7 +49,7 @@
         android:hint="Alimentacion del Animal"
         android:inputType="text"
         android:background="@drawable/edittext_background"
-        android:textColor="#000000"
+        android:textColor="#388E3C"
         android:textSize="16sp"
         android:padding="12dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -64,7 +65,7 @@
         android:hint="Año Nacimiento"
         android:inputType="text"
         android:background="@drawable/edittext_background"
-        android:textColor="#000000"
+        android:textColor="#388E3C"
         android:textSize="16sp"
         android:padding="12dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -80,7 +81,7 @@
         android:hint="Descripcion"
         android:inputType="text"
         android:background="@drawable/edittext_background"
-        android:textColor="#000000"
+        android:textColor="#388E3C"
         android:textSize="16sp"
         android:padding="12dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -93,6 +94,8 @@
         android:layout_marginStart="108dp"
         android:layout_marginTop="56dp"
         android:text="GUARDAR ANIMAL"
+        android:background="#A5D6A7"
+        android:textColor="#1B5E20"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tbDescripcion" />
 
