--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="green">#4AE860</color>
+    <color name="light_green">#7EFB92</color>
+    <color name="pastel_green">#A7FAC8</color>
+    <color name="dark_green">#2A8F44</color>
+    <color name="olive_green">#6B8E23</color>
+    <color name="aqua_green">#13EAC9</color>
 </resources>
