--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,12 +2,20 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.ProyectoFinalModulo" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">@color/dark_green</item>
+        <item name="colorPrimaryVariant">@color/olive_green</item>
+        <item name="colorOnPrimary">@color/white</item>
     </style>
 
-    <style name="Theme.ProyectoFinalModulo" parent="Base.Theme.ProyectoFinalModulo" />
-    <style name="SplashScreen" parent="Theme.SplashScreen"     >
-        <item name="windowSplashScreenBackground">@color/green</item>
+    <style name="Theme.ProyectoFinalModulo" parent="Base.Theme.ProyectoFinalModulo">
+        <!-- Additional customization for the main theme -->
+        <item name="colorSecondary">@color/aqua_green</item>
+        <item name="colorSecondaryVariant">@color/light_green</item>
+        <item name="colorOnSecondary">@color/black</item>
+    </style>
+
+    <style name="SplashScreen" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">@color/pastel_green</item>
         <item name="windowSplashScreenAnimatedIcon">@drawable/logo</item>
         <item name="postSplashScreenTheme">@style/Theme.ProyectoFinalModulo</item>
     </style>
