--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -7,6 +7,19 @@
     tools:context=".RegistroActivity">
 
     <EditText
+        android:id="@+id/tbRolUsuario"
+        android:layout_width="373dp"
+        android:layout_height="43dp"
+        android:layout_marginStart="17dp"
+        android:layout_marginTop="40dp"
+        android:ems="10"
+        android:hint="Rol"
+        android:inputType="text"
+        android:text="Rol"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tbTelefono" />
+
+    <EditText
         android:id="@+id/tbNombre"
         android:layout_width="370dp"
         android:layout_height="0dp"
