--- a/app/src/main/res/layout/item_animales.xml
+++ b/app/src/main/res/layout/item_animales.xml
@@ -12,7 +12,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="171dp">
+        android:layout_height="223dp">
 
         <TextView
             android:id="@+id/NombreAnimal"
@@ -63,5 +63,26 @@
             android:text="Descripcion"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/AnioAnimal" />
+
+        <Button
+            android:id="@+id/bAdoptar"
+            android:layout_width="156dp"
+            android:layout_height="45dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="33dp"
+            android:text="ADOPTAR"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/DescripcionAnimal" />
+
+        <Button
+            android:id="@+id/bApadrinar"
+            android:layout_width="156dp"
+            android:layout_height="45dp"
+            android:layout_marginStart="39dp"
+            android:layout_marginTop="33dp"
+            android:text="APADRINAR"
+            app:layout_constraintStart_toEndOf="@+id/bAdoptar"
+            app:layout_constraintTop_toBottomOf="@+id/DescripcionAnimal" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
