--- a/app/src/main/res/menu/menu_principal.xml
+++ b/app/src/main/res/menu/menu_principal.xml
@@ -19,4 +19,7 @@
         android:layout_height="wrap_content"
         android:title="Cerrar Sesion"
         android:id="@+id/cerrar_sesion"/>
+    <item
+        android:id="@+id/formulario_adoptar"
+        android:title="Formulario Adoptar" />
 </menu>
